--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>poo-library</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jdk.version>1.5</jdk.version>
+    <jdk.version>1.8</jdk.version>
   </properties>
   <modules>
     <module>poo-library-modelo</module>
@@ -25,8 +25,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.6</target>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
         </configuration>
       </plugin>
       <plugin>
