construindo DAOs genéricos via reflection

--- a/poo-library-dao-activejdbc/pom.xml
+++ b/poo-library-dao-activejdbc/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>activejdbc</artifactId>
       <version>1.4.11</version>
     </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.10</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
