organizadas factories e adicionada implementação em memória
organizadas dependências

--- a/poo-library-dao-memory/pom.xml
+++ b/poo-library-dao-memory/pom.xml
@@ -8,30 +8,15 @@
     <artifactId>poo-library</artifactId>
     <version>0.1.0-RELEASE</version>
   </parent>
-  <groupId>poo.library.app</groupId>
-  <artifactId>poo-library-app</artifactId>
+  <groupId>poo.library.dao.memory</groupId>
+  <artifactId>poo-library-dao-memory</artifactId>
   <version>0.1.0-RELEASE</version>
-  <name>poo-library-app</name>
+  <name>poo-library-dao-memory</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>poo.library.app.cfg</groupId>
-      <artifactId>poo-library-app-cfg</artifactId>
-      <version>0.1.0-RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>poo.library.comum</groupId>
-      <artifactId>poo-library-comum</artifactId>
-      <version>0.1.0-RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>poo.library.modelo</groupId>
-      <artifactId>poo-library-modelo</artifactId>
-      <version>0.1.0-RELEASE</version>
-    </dependency>
     <dependency>
       <groupId>poo.library.dao.comum</groupId>
       <artifactId>poo-library-dao-comum</artifactId>
