--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>poo.library</groupId>
   <artifactId>poo-library</artifactId>
@@ -17,6 +16,8 @@
     <module>poo-library-comum</module>
     <module>poo-library-dao-comum</module>
     <module>poo-library-dao-activejdbc</module>
+    <module>poo-library-app-cfg</module>
+    <module>poo-library-dao-memory</module>
   </modules>
   <build>
     <plugins>
