primeiros passos para a api web

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>poo.library</groupId>
   <artifactId>poo-library</artifactId>
@@ -8,7 +9,7 @@
   <name>poo-library</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jdk.version>1.8</jdk.version>
+    <jdk.version>1.5</jdk.version>
   </properties>
   <modules>
     <module>poo-library-modelo</module>
@@ -18,6 +19,7 @@
     <module>poo-library-dao-activejdbc</module>
     <module>poo-library-app-cfg</module>
     <module>poo-library-dao-memory</module>
+    <module>poo-library-app-web</module>
   </modules>
   <build>
     <plugins>
@@ -55,6 +57,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
