--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -16,7 +16,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <jersey.version>2.23.1</jersey.version>
+    <version.jersey>2.23.1</version.jersey>
     <jetty.version>9.3.9.M0</jetty.version>
     <jetty.http.port>9090</jetty.http.port>
     <resources.path>${project.basedir}/src/main/resources</resources.path>
@@ -28,7 +28,7 @@
       <dependency>
         <groupId>org.glassfish.jersey</groupId>
         <artifactId>jersey-bom</artifactId>
-        <version>${jersey.version}</version>
+        <version>${version.jersey}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -53,18 +53,35 @@
     <dependency>
       <groupId>org.glassfish.jersey.connectors</groupId>
       <artifactId>jersey-jetty-connector</artifactId>
-      <version>${jersey.version}</version>
+      <version>${version.jersey}</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-servlet-core</artifactId>
-      <version>${jersey.version}</version>
+      <version>${version.jersey}</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-json-jackson</artifactId>
-      <version>${jersey.version}</version>
+      <version>${version.jersey}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-processing</artifactId>
+      <version>${version.jersey}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-multipart</artifactId>
+      <version>${version.jersey}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-sse</artifactId>
+      <version>${version.jersey}</version>
+    </dependency>
+
     <dependency>
       <groupId>poo.library.app.cfg</groupId>
       <artifactId>poo-library-app-cfg</artifactId>
