--- a/poo-library-app-web/bower.json
+++ b/poo-library-app-web/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "poo-library-app-web",
   "description": "",
-  "main": [
-  ],
+  "main": [],
   "dependencies": {
-    "jquery": "~3.0.0"
+    "jquery": "~3.0.0",
+    "jquery-serialize-object" : "~2.5.0",
+    "angular" : "~1.5.7"
   },
   "devDependencies": {
     "qunit": "~1.16.0"
@@ -14,8 +15,7 @@
     "globals",
     "node"
   ],
-  "keywords": [
-  ],
+  "keywords": [],
   "authors": [
     "José Nascimento <joseaugustodearaujonascimento@gmail.com>",
     "Juscelino Messias"
