--- a/poo-library-app-web/src/main/webapp/WEB-INF/web.xml
+++ b/poo-library-app-web/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+
   <servlet>
     <servlet-name>Web Api</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
@@ -13,6 +14,7 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
+
   <servlet>
     <servlet-name>Web App Configurator</servlet-name>
     <servlet-class>poo.library.app.InitListener</servlet-class>
@@ -22,14 +24,36 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
+
+  <filter>
+    <filter-name>SetCharacterEncoding</filter-name>
+    <filter-class>poo.library.app.CharsetFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>SetCharacterEncoding</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <servlet-mapping>
     <servlet-name>Web Api</servlet-name>
     <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
+
   <resource-ref>
     <description>Default Datasource</description>
     <res-ref-name>jdbc/default</res-ref-name>
     <res-type>javax.sql.ConnectionPoolDataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <page-encoding>UTF-8</page-encoding>
+    </jsp-property-group>
+  </jsp-config>
 </web-app>
