melhorado processo de build

--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -140,6 +140,7 @@
           </httpConnector>
           <scanIntervalSeconds>1</scanIntervalSeconds>
           <jettyXml>${resources.path}/jetty.xml</jettyXml>
+          <webAppSourceDirectory>${project.basedir}/src/main/webapp</webAppSourceDirectory>
         </configuration>
         <dependencies>
           <dependency>
