--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -14,31 +14,31 @@
   <packaging>war</packaging>
   <name>poo-library-app-web</name>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <version.jersey>2.23.1</version.jersey>
-    <jetty.version>9.3.9.M0</jetty.version>
+    <version.jetty>9.3.9.M0</version.jetty>
+    <version.mysql.driver>5.1.39</version.mysql.driver>
+
     <jetty.http.port>9090</jetty.http.port>
     <resources.path>${project.basedir}/src/main/resources</resources.path>
 
-    <mysql.driver.version>5.1.39</mysql.driver.version>
   </properties>
   <dependencies>
 
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlets</artifactId>
-      <version>${jetty.version}</version>
+      <version>${version.jetty}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-plus</artifactId>
-      <version>${jetty.version}</version>
+      <version>${version.jetty}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-jndi</artifactId>
-      <version>${jetty.version}</version>
+      <version>${version.jetty}</version>
     </dependency>
 
     <dependency>
@@ -103,12 +103,12 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql.driver.version}</version>
+      <version>${version.mysql.driver}</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
   <build>
-    <finalName>poo-library-app-web</finalName>
+    <finalName>ROOT</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -133,7 +133,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>${jetty.version}</version>
+        <version>${version.jetty}</version>
         <configuration>
           <httpConnector>
             <port>${jetty.http.port}</port>
@@ -152,7 +152,7 @@
           <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.driver.version}</version>
+            <version>${version.mysql.driver}</version>
             <scope>runtime</scope>
           </dependency>
         </dependencies>
