WIP mais modelos & DAOs adicionados

--- a/poo-library-app/pom.xml
+++ b/poo-library-app/pom.xml
@@ -37,5 +37,11 @@
       <artifactId>poo-library-dao-comum</artifactId>
       <version>0.1.0-RELEASE</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.10</version>
+    </dependency>
   </dependencies>
 </project>
