removendo necessidade de proxies

--- a/poo-library-dao-activejdbc/pom.xml
+++ b/poo-library-dao-activejdbc/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>poo-library-dao-comum</artifactId>
       <version>0.1.0-RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>poo.library.modelo</groupId>
+      <artifactId>poo-library-modelo</artifactId>
+      <version>0.1.0-RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>mysql</groupId>
