WIP muitas alterações no modelo & persistência & api comum

--- a/poo-library-dao-comum/pom.xml
+++ b/poo-library-dao-comum/pom.xml
@@ -22,5 +22,10 @@
       <artifactId>poo-library-comum</artifactId>
       <version>0.1.0-RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>poo.library.modelo</groupId>
+      <artifactId>poo-library-modelo</artifactId>
+      <version>0.1.0-RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
