--- a/poo-library-app/pom.xml
+++ b/poo-library-app/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<project
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -22,6 +21,7 @@
       <artifactId>poo-library-app-cfg</artifactId>
       <version>0.1.0-RELEASE</version>
     </dependency>
+
     <dependency>
       <groupId>poo.library.comum</groupId>
       <artifactId>poo-library-comum</artifactId>
@@ -36,6 +36,25 @@
       <groupId>poo.library.dao.comum</groupId>
       <artifactId>poo-library-dao-comum</artifactId>
       <version>0.1.0-RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>poo.library.dao.jpa</groupId>
+      <artifactId>poo-library-dao-jpa</artifactId>
+      <version>0.1.0-RELEASE</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>poo.library.dao.activejdbc</groupId>
+      <artifactId>poo-library-dao-activejdbc</artifactId>
+      <version>0.1.0-RELEASE</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>poo.library.dao.memory</groupId>
+      <artifactId>poo-library-dao-memory</artifactId>
+      <version>0.1.0-RELEASE</version>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
