--- a/poo-library-app-web-selfhosting/pom.xml
+++ b/poo-library-app-web-selfhosting/pom.xml
@@ -30,6 +30,11 @@
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-webapp</artifactId>
+      <version>9.4.0.M0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
       <version>9.4.0.M0</version>
     </dependency>
