--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -10,8 +11,8 @@
   <groupId>poo.library.app.web</groupId>
   <artifactId>poo-library-app-web</artifactId>
   <version>0.1.0-RELEASE</version>
-  <!-- <packaging>war</packaging> -->
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
+  <!-- <packaging>jar</packaging> -->
   <name>poo-library-app-web</name>
   <properties>
 
@@ -24,6 +25,12 @@
 
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>poo.library.app.web.pages.admin</groupId>
+      <artifactId>poo-library-app-web-pages-admin</artifactId>
+      <version>0.1.0-RELEASE</version>
+      <scope>runtime</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
