adicionado plugin maven para geração de web-app standalone
melhorias nas configurações de persistência

--- a/poo-library-app-web-selfhosting/pom.xml
+++ b/poo-library-app-web-selfhosting/pom.xml
@@ -26,17 +26,33 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <version>9.4.0.M0</version>
+      <version>${version.jetty}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-webapp</artifactId>
-      <version>9.4.0.M0</version>
+      <version>${version.jetty}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
-      <version>9.4.0.M0</version>
+      <version>${version.jetty}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-annotations</artifactId>
+      <version>${version.jetty}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>apache-jsp</artifactId>
+      <version>${version.jetty}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>apache-jstl</artifactId>
+      <version>${version.jetty}</version>
     </dependency>
 
     <!-- <dependency> -->
@@ -66,6 +82,7 @@
       <version>3.1.0</version>
       <!-- <scope>provided</scope> -->
     </dependency>
+
     <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
