--- a/poo-library-dao-jpa/pom.xml
+++ b/poo-library-dao-jpa/pom.xml
@@ -48,6 +48,13 @@
       <version>${version.mysql.driver}</version>
       <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.192</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
