--- a/poo-library-app-web/bower.json
+++ b/poo-library-app-web/bower.json
@@ -3,7 +3,9 @@
   "description": "",
   "main": [],
   "dependencies": {
-    "angular" : "~1.5.7"
+    "angular": "~1.5.7",
+    "angular-route": "~1.5.7",
+    "bootswatch": "~3.3.6"
   },
   "moduleType": [
     "amd",
