--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -186,6 +186,12 @@
       <version>1.4.192</version>
       <scope>runtime</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>0.7.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>ROOT</finalName>
