--- a/poo-library-app-web/pom.xml
+++ b/poo-library-app-web/pom.xml
@@ -307,6 +307,16 @@
           </dependency>
         </dependencies>
       </plugin>
+
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>1.0.3</version>
+        <configuration>
+          <appName>api-biblioteca</appName>
+          <jdkVersion>1.8</jdkVersion>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
