--- a/poo-library-app-web/bower.json
+++ b/poo-library-app-web/bower.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "angular": "~1.5.7",
     "angular-route": "~1.5.7",
-    "bootswatch": "~3.3.6"
+    "bootswatch": "~3.3.6",
+    "jquery.inputmask": "~2.5.0"
   },
   "moduleType": [
     "amd",
