--- a/poo-library-app-web/src/main/webapp/WEB-INF/web.xml
+++ b/poo-library-app-web/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,7 @@
   </jsp-config>
 
   <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
