--- a/poo-library-app-web/bower.json
+++ b/poo-library-app-web/bower.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "angular": "~1.5.7",
     "angular-route": "~1.5.7",
+    "angular-animate": "~1.5.7",
     "bootswatch": "~3.3.6",
-    "jquery.inputmask": "~3.1.0"
+    "jquery.inputmask": "~3.1.0",
+    "angular-loading-bar": "^0.9.0"
   },
   "moduleType": [
     "amd",
