--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
+sudo: false
 jdk:
   - oraclejdk8
-script: mvn clean package
+script: bower --version && ./clean && ./build
+before_script:
+  - npm install -g bower
