--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "bower": "~1.7.9"
   },
   "scripts": {
-    "postinstall": "cd *-web && bower install"
+    "postinstall": "bower install"
   }
 }
